*** DONE Fix the probability in speed training mode
    :LOGBOOK:
    - State "DONE"       from "TODO"       [2011-02-13 Sun 15:51]
    :END:
    :PROPERTIES:
    :ARCHIVE_TIME: 2011-02-13 Sun 16:00
    :ARCHIVE_FILE: ~/src/qtcw/qtcw/docs/TODO.org
    :ARCHIVE_OLPATH: The TODO list
    :ARCHIVE_CATEGORY: TODO
    :ARCHIVE_TODO: DONE
    :END:
*** DONE create a home screen and a home screen button
  SCHEDULED: <2011-02-13 Sun>
  :LOGBOOK:
  - State "DONE"       from "TODO"       [2011-02-13 Sun 15:51]
  :END:
    :PROPERTIES:
    :ARCHIVE_TIME: 2011-02-13 Sun 16:01
    :ARCHIVE_FILE: ~/src/qtcw/qtcw/docs/TODO.org
    :ARCHIVE_OLPATH: The TODO list
    :ARCHIVE_CATEGORY: TODO
    :ARCHIVE_TODO: DONE
    :END:
*** DONE fix trailing sound sometimes cut off on linux
  SCHEDULED: <2011-02-13 Sun>
  :LOGBOOK:
  - State "DONE"       from "TODO"       [2011-02-13 Sun 08:33]
  :END:
    :PROPERTIES:
    :ARCHIVE_TIME: 2011-02-13 Sun 16:01
    :ARCHIVE_FILE: ~/src/qtcw/qtcw/docs/TODO.org
    :ARCHIVE_OLPATH: The TODO list
    :ARCHIVE_CATEGORY: TODO
    :ARCHIVE_TODO: DONE
    :END:
*** DONE Make the progress bars draw a level indicator on top for:
    :LOGBOOK:
    - State "DONE"       from "TODO"       [2011-02-13 Sun 09:02]
    :END:
    - [X] The needed training level
  SCHEDULED: <2011-02-13 Sun>
    :PROPERTIES:
    :ARCHIVE_TIME: 2011-02-13 Sun 16:02
    :ARCHIVE_FILE: ~/src/qtcw/qtcw/docs/TODO.org
    :ARCHIVE_OLPATH: The TODO list
    :ARCHIVE_CATEGORY: TODO
    :ARCHIVE_TODO: DONE
    :END:
*** DONE make the home screen use QGroupBoxes
  SCHEDULED: <2011-02-13 Sun>
  :LOGBOOK:
  - State "DONE"       from "TODO"       [2011-02-13 Sun 16:19]
  :END:
    :PROPERTIES:
    :ARCHIVE_TIME: 2011-02-13 Sun 16:19
    :ARCHIVE_FILE: ~/src/qtcw/qtcw/docs/TODO.org
    :ARCHIVE_OLPATH: The TODO list
    :ARCHIVE_CATEGORY: TODO
    :ARCHIVE_TODO: DONE
    :END:
